REGRESSION: A problem with Voiceover and finding links https://bugs.webkit.org/show_bug.cgi?id=52324

Reviewed by Darin Adler.

Source/WebCore:

Fallout from recent change to make WebCore return its own scroll view.
   1) There were two scroll views in the hierarchy, one which no needed to be ignored.
   2) Hit tests for sub frames needed to be offset.
   3) The check for whether an attachment is ignored must happen earlier than using
      the helpText to determine if an element should be ignored.

Test: platform/mac/accessibility/iframe-with-title-correct-hierarchy.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::elementAccessibilityHitTest):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper scrollViewParent]):

Source/WebKit/mac:

* WebView/WebDynamicScrollBarsView.mm:
(-[WebDynamicScrollBarsView accessibilityIsIgnored]):

LayoutTests:

* platform/mac/accessibility/iframe-with-title-correct-hierarchy-expected.txt: Added.
* platform/mac/accessibility/iframe-with-title-correct-hierarchy.html: Added.



Canonical link: https://commits.webkit.org/66282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76044 268f45cc-cd09-0410-ab3c-d52691b4dbfc